objects/sbaa__ApprovalVariable__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__AggregateField__c</fullName>
        <label>Aggregate Field</label>
        <picklist>
            <picklistValues>
                <fullName>Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List_Total__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subtotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__Discount__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular_Discount_Per_Product__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__TotalDiscountAmount__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net_Unit_Price_ACV__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__AggregateFunction__c</fullName>
        <label>Aggregate Function</label>
        <picklist>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__CombineWith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Combine With</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipName>CombinedSummaryVariables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__FilterField__c</fullName>
        <label>Filter Field</label>
        <picklist>
            <controllingField>sbaa__TargetObject__c</controllingField>
            <picklistValues>
                <fullName>Product Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product_Code__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__FilterValue__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__ListVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>List Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipName>ListSummaryVariables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__NetVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Net Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipName>NetSummaryVariables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ends with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__TargetObject__c</fullName>
        <label>Target Object</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__Quote__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__QuoteLine__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Approval Variable</label>
    <listViews>
        <fullName>sbaa__All</fullName>
        <columns>NAME</columns>
        <columns>sbaa__Type__c</columns>
        <columns>sbaa__TargetObject__c</columns>
        <columns>sbaa__FilterField__c</columns>
        <columns>sbaa__Operator__c</columns>
        <columns>sbaa__FilterValue__c</columns>
        <columns>sbaa__AggregateField__c</columns>
        <columns>sbaa__AggregateFunction__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Variables</pluralLabel>
    <recordTypes>
        <fullName>sbaa__Generic</fullName>
        <active>true</active>
        <label>Generic</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>